--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?&family=Ubuntudisplay=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 * {
     box-sizing: border-box;  
 }
@@ -20,7 +19,6 @@ body{
 
 .bg{
     height: 100px;
-    
     background: url('https://i.picsum.photos/id/1005/5760/3840.jpg?hmac=2acSJCOwz9q_dKtDZdSB-OIK1HUcwBeXco_RMMTUgfY') no-repeat center center/cover;
     position: absolute;
     top: 0;
@@ -28,6 +26,10 @@ body{
     width: 100vw;
     height: 100vh;
     z-index: -1;
+    filter: blur(30px);
 }
 
-.
+.loading-test{
+    color: white;
+    font-size: 3rem;
+}
